tests/should_fail/list_pop_empty.nv
module main

// SHOULD FAIL: pop from empty list
let xs: [Int] = []
xs.pop()
